[package]
name = "itelem"
description = "Parsing of iRacing .ibt telemetry file"
repository = "https://github.com/gmartsenkov/itelem"
version = "0.1.3"
edition = "2021"
license = "MIT OR Apache-2.0"
keywords = ["ibt", "iracing"]
readme = "README.md"
include = [
  "**/*.rs",
  "Cargo.toml",
]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"], default-features = false }
serde_yaml = "0.9"
